--- a/releases.yaml
+++ b/releases.yaml
@@ -610,6 +610,7 @@ releases:
             mrwl3G: 1.20.1
             mrwl3_042: 1.20.1
             mrwm2G: 1.20.2
+            # WB-MWAC
             wbmwac: 1.19.2      # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwacG: 1.20.1
@@ -687,29 +688,30 @@ releases:
         firmwares:
             # WB-MR
             mr2m: 1.15.2        # на данном таргете на версиях старше 1.15.2 прошивка перестала помещаться в 12K (16K FLASH - 4K bootloader)
-            mr2m_k6: 1.20.1
-            mr2mG: 1.20.1
-            mr3: 1.20.1
-            mr3G: 1.20.1
-            mr6: 1.20.1
-            mr6_042: 1.20.1
-            mr6G: 1.20.1
-            mr6c: 1.20.1
-            mr6cG: 1.20.1
-            mr6c_042: 1.20.1
-            mr6cu: 1.20.1
-            mr6cu_042: 1.20.1
-            mr6cuG: 1.20.1
-            mr6cpG: 1.20.1
-            mrps6: 1.20.1
-            mrps6G: 1.20.1
-            mrwl3: 1.20.1
-            mrwl3G: 1.20.1
-            mrwl3_042: 1.20.1
-            mrwm2G: 1.20.2
+            mr2m_k6: 1.20.3
+            mr2mG: 1.20.3
+            mr3: 1.20.3
+            mr3G: 1.20.3
+            mr6: 1.20.3
+            mr6_042: 1.20.3
+            mr6G: 1.20.3
+            mr6c: 1.20.3
+            mr6cG: 1.20.3
+            mr6c_042: 1.20.3
+            mr6cu: 1.20.3
+            mr6cu_042: 1.20.3
+            mr6cuG: 1.20.3
+            mr6cpG: 1.20.3
+            mrps6: 1.20.3
+            mrps6G: 1.20.3
+            mrwl3: 1.20.3
+            mrwl3G: 1.20.3
+            mrwl3_042: 1.20.3
+            mrwm2G: 1.20.3
+            # WB-MWAC
             wbmwac: 1.19.2      # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            wbmwacG: 1.20.1
+            wbmwacG: 1.20.3
             # WB-M1W2
             m1w2: 4.31.0        # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             m1w2-21: 4.31.0     # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
