--- a/releases.yaml
+++ b/releases.yaml
@@ -175,7 +175,7 @@ releases:
             <<: *packages-wb-2307-wb7-bullseye
             mplc4-oni-plc-w: 1.3.3.14561
             wb-mqtt-homeui: 2.75.6-cb8ea449-wb100
-            wb-utils: 4.12.0-wb105-cb8ea449
+            wb-utils: 4.12.0-wb105-cb8ea449-1
 
     wb-2304:
         packages-common: &packages-wb-2304
