--- a/releases.yaml
+++ b/releases.yaml
@@ -78,6 +78,7 @@ releases:
             python3-wb-nm-helper: 1.29.1
             python3-wb-test-suite-deps: 1.17.3
             python3-wb-update-manager: 1.3.2
+            python3-zpl: 0.1.10
             rapidscada: 6.1.4-1
             sensor-tools-scada-client: '1.1'
             serial-tool: 1.2.0
