--- a/releases.yaml
+++ b/releases.yaml
@@ -662,6 +662,7 @@ releases:
             map12eG: 2.7.1
             map12h: 2.7.1
             map3eG16: 2.7.1
+            map3evG16: 2.7.2
             map6seG16: 2.7.1
             map6sG16: 2.6.2         #таргет не проходит стенд калибровки на прошивке 2.7.1
             map6semG16: 2.7.1
@@ -760,6 +761,7 @@ releases:
             map12eG: 2.7.1
             map12h: 2.7.1
             map3eG16: 2.7.1
+            map3evG16: 2.7.2
             map6seG16: 2.7.1
             map6sG16: 2.6.3         #таргет не проходит стенд калибровки на прошивке 2.7.1
             map6semG16: 2.7.1
