--- a/releases.yaml
+++ b/releases.yaml
@@ -163,6 +163,7 @@ releases:
 
             linux-headers-wb7: 5.10.35-wb142+wb101
             linux-image-wb7: 5.10.35-wb142+wb101
+            mplc4-wirenboard7: 1.3.3.15223
             u-boot-tools-wb: 2:2021.10+wb1.7.0
             u-boot-wb7: 2:2021.10+wb1.7.0
 
@@ -174,7 +175,7 @@ releases:
     wb-2307-cb8ea449:
         wb7/bullseye:
             <<: *packages-wb-2307-wb7-bullseye
-            mplc4-oni-plc-w: 1.3.3.14561
+            mplc4-oni-plc-w: 1.3.3.15223
             wb-mqtt-homeui: 2.75.6-cb8ea449-wb100
             wb-utils: 4.12.0-wb105-cb8ea449-1
 
