--- a/releases.yaml
+++ b/releases.yaml
@@ -645,9 +645,9 @@ releases:
             msw5GL: 4.30.0
             msw5Gth: 4.29.11
             # WB-MD
-            mdm3: 2.6.6
-            mdm3_042: 2.6.6
-            mdm3_26: 2.6.6
+            mdm3: 2.6.6         # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mdm3_26: 2.6.6      # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3G26: 2.6.6
             # WB-MAP
             map3e: 2.7.1
@@ -744,10 +744,10 @@ releases:
             msw5GL: 4.31.1
             msw5Gth: 4.31.1
             # WB-MD
-            mdm3: 2.6.6
-            mdm3_042: 2.6.6
-            mdm3_26: 2.6.6
-            mdm3G26: 2.6.6
+            mdm3: 2.6.6         # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mdm3_26: 2.6.6      # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mdm3G26: 2.7.0
             # WB-MAP
             map3e: 2.7.1
             map3e16: 2.7.1
