--- a/releases.yaml
+++ b/releases.yaml
@@ -150,6 +150,9 @@ releases:
             zbw: '1.2'
             zigbee2mqtt: 1.32.2-wb101
             zigbee2mqtt-1.18.1: 1.18.1-wb102
+            sigrok-cli: 0.7.2-1
+            libsigrok4: 0.5.2-4
+            libsigrokdecode4: 0.5.3-4
 
         wb6/bullseye:
             <<: *packages-wb-2307
@@ -908,6 +911,9 @@ staging:
         - "libmodbus*"
 
         - "mmc-utils"
+
+        - "sigrok-cli"
+        - "libsigrok*"
 
     exclude:
         - "*-dbgsym"
