--- a/releases.yaml
+++ b/releases.yaml
@@ -74,7 +74,6 @@ releases:
             python3-wb-nm-helper: 1.29.3
             python3-wb-test-suite-deps: 1.17.4
             python3-wb-update-manager: 1.3.2
-            python3-zpl: 0.1.10-wb101
             rapidscada: 6.1.4-1
             sensor-tools-scada-client: '1.1'
             serial-tool: 1.2.0
@@ -94,6 +93,7 @@ releases:
             wb-dt-overlays: 1.6.0+wb1
             wb-ec-firmware: 1.0.1
             wb-essential: 1.17.4
+            wb-firmware-realtek: 1.0.2
             wb-homa-adc: 2.6.3
             wb-homa-gpio: 2.12.2
             wb-homa-ism-radio: 1.17.3
