--- a/releases.yaml
+++ b/releases.yaml
@@ -113,7 +113,7 @@ releases:
             wb-mqtt-db: 2.8.9
             wb-mqtt-db-cli: 1.4.5
             wb-mqtt-gpio: 2.12.3
-            wb-mqtt-homeui: 2.75.14
+            wb-mqtt-homeui: 2.75.14-wb100
             wb-mqtt-iec104: 1.1.2
             wb-mqtt-knx: 1.12.2
             wb-mqtt-logs: 1.4.3
