--- a/releases.yaml
+++ b/releases.yaml
@@ -1043,6 +1043,8 @@ staging:
         - "contactless-keyring"
         - "emmcparm"
         - "firmware-realtek"
+        - "frpc"
+        - "frps"
         - "hubpower"
         - "intrascada"
         - "intrahouse"
@@ -1064,6 +1066,7 @@ staging:
         - "sensor-tools-scada-client"
         - "serial-tool"
         - "tailscale"
+        - "telegraf-wb-cloud-agent"
         - "u-boot-tools-wb"
         - "u-boot-wb?"
         - "wb-*"
