--- a/releases.yaml
+++ b/releases.yaml
@@ -852,6 +852,7 @@ releases:
             # WB-MAI
             wb-mai-v10: 1.3.1
             wb-mai6: 2.0.5
+            wb-mai6-15: 2.0.6
             # WB-MIO
             mio: 1.6.2
             # WB-REF
@@ -952,6 +953,7 @@ releases:
             # WB-MAI
             wb-mai-v10: 1.3.1
             wb-mai6: 2.0.5
+            wb-mai6-15: 2.0.6
             # WB-MIO
             mio: 1.6.2
             # WB-REF
