--- a/releases.yaml
+++ b/releases.yaml
@@ -643,6 +643,7 @@ releases:
             e2fsprogs: 1.43.4-2+wb1
             emmcparm: 5.0.0
             flash-simcom-a76xx: 1.0.2
+            frpc: 0.52.3
             fuse2fs: 1.43.4-2+wb1
             gpiod: 1.2-3
             intrahouse: 5.11.40
@@ -658,6 +659,9 @@ releases:
             python3-modbus-utils-rpc: 1.0.1
             rapidscada: 6.0.2-1
             ss-dev: 2.0-1.43.4-2+wb1
+            telegraf-wb-cloud-agent: 1.28.4
+            wb-cloud-agent: 1.2.5-wb100
+            wb-cloud-agent-curl: 1.2.5-wb100
             wb-demo-kit-configs: 1.6.1
             wb-essential: 1.15.0
             wb-homa-adc: 2.5.0
@@ -669,7 +673,7 @@ releases:
             wb-mqtt-dac: 1.2.0
             wb-mqtt-db: 2.6.0-wb100
             wb-mqtt-gpio: 2.8.4-wb100
-            wb-mqtt-homeui: 2.44.4-wb100
+            wb-mqtt-homeui: 2.44.4-wb102
             wb-mqtt-iec104: 1.0.2
             wb-mqtt-knx: 1.9.0
             wb-mqtt-logs: 1.3.0-wb100  # stretch-fixed, >> 1.4.0 builds are for bullseye
@@ -747,7 +751,7 @@ releases:
     wb-2207-bullseye-transition:
         packages-common-bullseye-transition: &packages-wb-2207-bullseye-transition
             python3-wb-update-manager: 1.2.5-wb1-upgrade18
-            wb-mqtt-homeui: 2.44.4-wb100-upgrade2
+            wb-mqtt-homeui: 2.44.4-wb102-upgrade2
             wb-update-manager: 1.2.5-wb1-upgrade18
 
         wb6/stretch:
