--- a/releases.yaml
+++ b/releases.yaml
@@ -12,6 +12,7 @@ releases:
             emmcparm: 5.0.0
             firmware-realtek: 20170823-1~bpo9+1
             flash-simcom-a76xx: 1.1.0
+            frpc: 0.52.3
             fuse2fs: 1.46.2-2+wb1
             gir1.2-modemmanager-1.0: 1.20.0-1~bpo11+1-wb105
             gir1.2-nm-1.0: 1.42.4-1~bpo11+1-wb101
@@ -81,9 +82,11 @@ releases:
             tailscale: 1.54.0
             task-wb-base-system: 1.17.4
             task-wb-common-pkgs: 1.17.4
+            telegraf-wb-cloud-agent: 1.28.4
             u-boot-tools-wb: 2:2021.10+wb1.7.0
             wb-ble-tesliot: 1.1.1
             wb-cc2652p-flasher: 1.0.0
+            wb-cloud-agent: 1.2.5
             wb-configs: 3.19.3
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.6.3
@@ -113,7 +116,7 @@ releases:
             wb-mqtt-db: 2.8.9
             wb-mqtt-db-cli: 1.4.5
             wb-mqtt-gpio: 2.12.3
-            wb-mqtt-homeui: 2.75.14-wb101
+            wb-mqtt-homeui: 2.75.14-wb102
             wb-mqtt-iec104: 1.1.2
             wb-mqtt-knx: 1.12.2
             wb-mqtt-logs: 1.4.3
@@ -643,6 +646,7 @@ releases:
             e2fsprogs: 1.43.4-2+wb1
             emmcparm: 5.0.0
             flash-simcom-a76xx: 1.0.2
+            frpc: 0.52.3
             fuse2fs: 1.43.4-2+wb1
             gpiod: 1.2-3
             intrahouse: 5.11.40
@@ -658,6 +662,9 @@ releases:
             python3-modbus-utils-rpc: 1.0.1
             rapidscada: 6.0.2-1
             ss-dev: 2.0-1.43.4-2+wb1
+            telegraf-wb-cloud-agent: 1.28.4
+            wb-cloud-agent: 1.2.5-wb100
+            wb-cloud-agent-curl: 1.2.5-wb100
             wb-demo-kit-configs: 1.6.1
             wb-essential: 1.15.0
             wb-homa-adc: 2.5.0
@@ -669,7 +676,7 @@ releases:
             wb-mqtt-dac: 1.2.0
             wb-mqtt-db: 2.6.0-wb100
             wb-mqtt-gpio: 2.8.4-wb100
-            wb-mqtt-homeui: 2.44.4-wb100
+            wb-mqtt-homeui: 2.44.4-wb102
             wb-mqtt-iec104: 1.0.2
             wb-mqtt-knx: 1.9.0
             wb-mqtt-logs: 1.3.0-wb100  # stretch-fixed, >> 1.4.0 builds are for bullseye
@@ -747,7 +754,7 @@ releases:
     wb-2207-bullseye-transition:
         packages-common-bullseye-transition: &packages-wb-2207-bullseye-transition
             python3-wb-update-manager: 1.2.5-wb1-upgrade18
-            wb-mqtt-homeui: 2.44.4-wb100-upgrade2
+            wb-mqtt-homeui: 2.44.4-wb102-upgrade2
             wb-update-manager: 1.2.5-wb1-upgrade18
 
         wb6/stretch:
