--- a/releases.yaml
+++ b/releases.yaml
@@ -1068,6 +1068,7 @@ staging:
         - "linux-libc-dev"
         - "modbus-utils"
         - "modbus-utils-rpc"
+        - "mobile-broadband-provider-info"
         - "mplc4-*"
         - "mqtt-logger"
         - "mqtt-tools"
