--- a/releases.yaml
+++ b/releases.yaml
@@ -287,16 +287,16 @@ releases:
             wb-zigbee2mqtt: 1.3.5
             zigbee2mqtt: 1.39.0-wb101
 
-            linux-headers-wb8: 6.8.0-wb16~exp~feature+wb8+6+8~136~g0921564ee103
-            linux-image-wb8: 6.8.0-wb16~exp~feature+wb8+6+8~136~g0921564ee103
-            linux-libc-dev: 6.8.0-wb16~exp~feature+wb8+6+8~136~g0921564ee103
-            wb-bootlet-wb8x: 6.8.0-wb16~exp~feature+wb8+6+8~136~g0921564ee103-fs1.3.1-deb11-202405141557
+            linux-headers-wb8: 6.8.0-wb17~exp~feature+wb8+6+8~139~g50010b211472
+            linux-image-wb8: 6.8.0-wb17~exp~feature+wb8+6+8~139~g50010b211472
+            linux-libc-dev: 6.8.0-wb17~exp~feature+wb8+6+8~139~g50010b211472
+            wb-bootlet-wb8x: 6.8.0-wb17~exp~feature+wb8+6+8~139~g50010b211472-fs1.3.1-deb11-202405141557
 
             u-boot-wb8: 2:2024.01+wb1.0.0
             u-boot-tools: 2:2024.01+wb1.0.0
             u-boot-tools-wb: 2:2024.01+wb1.0.0
 
-            wb-hwconf-manager: 1.60.0
+            wb-hwconf-manager: 1.60.1
             wb-configs: 3.23.1-wb104+2
             wb-utils: 4.21.2-wb100
 
