--- a/releases.yaml
+++ b/releases.yaml
@@ -1068,6 +1068,7 @@ releases:
             # WB-MAO
             mao4: 2.4.4         # на данном таргете на версиях старше 2.4.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mao4G: 2.5.1
+            mao4G-C: 2.6.0
             # WB-MAI
             wb-mai-v10: 1.3.1
             wb-mai6: 2.1.0
@@ -1175,6 +1176,7 @@ releases:
             # WB-MAO
             mao4: 2.4.4         # на данном таргете на версиях старше 2.4.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mao4G: 2.5.1
+            mao4G-C: 2.6.0
             # WB-MAI
             wb-mai-v10: 1.3.1
             wb-mai6: 2.1.0
