--- a/releases.yaml
+++ b/releases.yaml
@@ -128,7 +128,7 @@ releases:
             wb-mqtt-metrics: 0.3.3
             wb-mqtt-opcua: 1.1.7
             wb-mqtt-rfblinds: 1.0.3
-            wb-mqtt-serial: 2.138.1-wb100
+            wb-mqtt-serial: 2.138.1-wb104
             wb-mqtt-smartbus: '1.2'
             wb-mqtt-smartweb: 1.4.6
             wb-mqtt-snmp: 1.3.3
@@ -1068,6 +1068,7 @@ releases:
             # WB-MAO
             mao4: 2.4.4         # на данном таргете на версиях старше 2.4.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mao4G: 2.5.1
+            mao4G-C: 2.6.0
             # WB-MAI
             wb-mai-v10: 1.3.1
             wb-mai6: 2.1.0
@@ -1175,6 +1176,7 @@ releases:
             # WB-MAO
             mao4: 2.4.4         # на данном таргете на версиях старше 2.4.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mao4G: 2.5.1
+            mao4G-C: 2.6.0
             # WB-MAI
             wb-mai-v10: 1.3.1
             wb-mai6: 2.1.0
