--- a/releases.yaml
+++ b/releases.yaml
@@ -1300,7 +1300,7 @@ staging:
         - "mqtt-logger"
         - "mqtt-tools"
         - "mqttui"
-        - "nodejs"
+        - "nodejs*"
         - "python*"
         - "rapidscada"
         - "serial-tool"
