--- a/releases.yaml
+++ b/releases.yaml
@@ -125,7 +125,7 @@ releases:
             wb-mqtt-iec104: 1.1.10
             wb-mqtt-knx: 1.13.0
             wb-mqtt-logs: 1.4.7
-            wb-mqtt-mbgate: 1.7.2
+            wb-mqtt-mbgate: 1.7.2-wb100
             wb-mqtt-metrics: 0.3.3
             wb-mqtt-opcua: 1.1.7
             wb-mqtt-rfblinds: 1.0.3
