--- a/releases.yaml
+++ b/releases.yaml
@@ -92,7 +92,7 @@ releases:
             wb-ble-tesliot: 1.1.1
             wb-cc2652p-flasher: 1.0.0
             wb-cloud-agent: 1.5.7
-            wb-configs: 3.28.0
+            wb-configs: 3.28.0-wb100
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.8.2
             wb-device-manager: 1.9.1
